<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    tools:context=".views.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.setheightwidthpercentage_android_examples.com.MainActivity"
        android:weightSum="100"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30sp"
                android:paddingBottom="10sp"
                android:text="@string/header_text"
                android:textColor="@color/white"
                android:textSize="41sp"
                android:textStyle="bold|italic"
                android:textAlignment="center"
                android:gravity="center"/>
            <TextView
                android:id="@+id/text_ip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_ip"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:paddingStart="15sp"
                android:paddingEnd="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"/>
            <EditText
                android:id="@+id/ip_address"
                android:labelFor="@id/ip_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789."
                android:inputType="number|numberDecimal"
                android:textSize="20sp"
                android:textDirection="ltr"
                android:textColor="@color/white"
                android:theme="@android:style/Theme.Holo"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"
                android:singleLine="true"
                android:nextFocusForward="@+id/port_address"
                android:importantForAutofill="no" />
            <TextView
                android:id="@+id/text_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ask_port"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"/>
            <EditText
                android:id="@+id/port_address"
                android:labelFor="@id/port_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="0123456789"
                android:inputType="number"
                android:textSize="20sp"
                android:textDirection="ltr"
                android:theme="@android:style/Theme.Holo"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="5sp"

                android:importantForAutofill="no"
                android:singleLine="true" />

            <Button
                android:id="@+id/btn_connect"
                android:textSize="23sp"
                android:textAllCaps="false"
                android:paddingLeft="20sp"
                android:paddingRight="20sp"
                android:paddingTop="12sp"
                android:paddingBottom="12sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_connect"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:background="@color/black_60"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:orientation="vertical"
            android:background="@color/white_40"
            android:paddingTop="5sp"
            android:paddingBottom="5sp">
            <TextView
                android:id="@+id/text_throttle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_throttle"
                android:textSize="18sp"
                android:textColor="@color/black_60"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="0sp"/>

            <TextView
                android:id="@+id/text_rudder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_rudder"
                android:textSize="18sp"
                android:textColor="@color/black_60"
                android:gravity="center"
                android:textStyle="bold"
                android:paddingLeft="15sp"
                android:paddingRight="15sp"
                android:paddingTop="5sp"
                android:paddingBottom="0sp"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
